feat: add endpoint for maintenance requests; return cookie to react-native client
