# src/middlewares/validation.middleware.ts
@@ -3,6 +3,12 @@ import { validate, ValidationError } from 'class-validator';
 import { RequestHandler } from 'express';
 import { HttpException } from '@exceptions/HttpException';
 
+const convertDates = (data: any) => {
+  console.log(data);
+  const mvdate = new Date(data.move_in);
+  data.move_in = mvdate;
+};
+
 const validationMiddleware = (
   type: any,
   value: string | 'body' | 'query' | 'params' = 'body',
@@ -11,6 +17,8 @@ const validationMiddleware = (
   forbidNonWhitelisted = true,
 ): RequestHandler => {
   return (req, res, next) => {
+    if (req.url.includes('/tenants')) convertDates(req['body']);
+
     validate(plainToInstance(type, req[value]), { skipMissingProperties, whitelist, forbidNonWhitelisted }).then((errors: ValidationError[]) => {
       if (errors.length > 0) {
         const message = errors.map((error: ValidationError) => Object.values(error.constraints)).join(', ');
